[gd_scene load_steps=6 format=3 uid="uid://dmab5sthll2kw"]

[ext_resource type="Script" path="res://simpleTimerButton.gd" id="1_n4s0a"]
[ext_resource type="Script" path="res://simple_suprise_timer.gd" id="2_gytry"]
[ext_resource type="Script" path="res://ticker.gd" id="4_8gqgu"]
[ext_resource type="Script" path="res://pet.gd" id="5_lsjiw"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_011nb"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -283.0
offset_right = 283.0
grow_horizontal = 2
grow_vertical = 2
columns = 7

[node name="template" type="ColorRect" parent="Panel/GridContainer"]
visible = false
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Timer" type="Timer" parent="Panel/GridContainer/template"]

[node name="Button" type="Button" parent="Panel/GridContainer/template"]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 9.785
offset_right = 55.0
offset_bottom = 40.785
grow_horizontal = 2
grow_vertical = 2
text = "reset"

[node name="Label" type="Label" parent="Panel/GridContainer/template"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -38.515
offset_right = 20.0
offset_bottom = -15.515
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "simple timer"

[node name="SimpleTimerButton" type="ColorRect" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
script = ExtResource("1_n4s0a")

[node name="Timer" type="Timer" parent="Panel/GridContainer/SimpleTimerButton"]

[node name="Button" type="Button" parent="Panel/GridContainer/SimpleTimerButton"]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 9.785
offset_right = 55.0
offset_bottom = 40.785
grow_horizontal = 2
grow_vertical = 2
text = "reset"

[node name="Label" type="Label" parent="Panel/GridContainer/SimpleTimerButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -38.515
offset_right = 20.0
offset_bottom = -15.515
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "simple timer"

[node name="SimpleSupriseTimer" type="ColorRect" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
script = ExtResource("2_gytry")

[node name="TimerCountdown" type="Timer" parent="Panel/GridContainer/SimpleSupriseTimer"]
wait_time = 3.0

[node name="TimerHidden" type="Timer" parent="Panel/GridContainer/SimpleSupriseTimer"]
wait_time = 20.0

[node name="Button" type="Button" parent="Panel/GridContainer/SimpleSupriseTimer"]
visible = false
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 9.785
offset_right = 55.0
offset_bottom = 40.785
grow_horizontal = 2
grow_vertical = 2
text = "defuse"

[node name="Label" type="Label" parent="Panel/GridContainer/SimpleSupriseTimer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -38.515
offset_right = 20.0
offset_bottom = -15.515
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "suprise timer"

[node name="ticker" type="ColorRect" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
script = ExtResource("4_8gqgu")

[node name="Timer" type="Timer" parent="Panel/GridContainer/ticker"]

[node name="Button" type="Button" parent="Panel/GridContainer/ticker"]
layout_direction = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.5
offset_top = -37.635
offset_right = 15.5
offset_bottom = -6.635
grow_horizontal = 2
grow_vertical = 0
text = "+1"

[node name="Label" type="Label" parent="Panel/GridContainer/ticker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -38.515
offset_right = 20.0
offset_bottom = -15.515
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "ticker"

[node name="CheckButton" type="CheckButton" parent="Panel/GridContainer/ticker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.315
offset_top = -12.0
offset_right = 13.685
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="_label" type="Label" parent="Panel/GridContainer/ticker/CheckButton"]
layout_mode = 0
offset_left = 39.0
offset_right = 79.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "x2"

[node name="pet" type="ColorRect" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
script = ExtResource("5_lsjiw")

[node name="Timer" type="Timer" parent="Panel/GridContainer/pet"]
wait_time = 3.0
autostart = true

[node name="Button_Food" type="Button" parent="Panel/GridContainer/pet"]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = 26.0
offset_right = 51.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
text = "food"

[node name="Button_Water" type="Button" parent="Panel/GridContainer/pet"]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 3.27
offset_top = 26.0
offset_right = 113.27
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
text = "water"

[node name="Label" type="Label" parent="Panel/GridContainer/pet"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.31
offset_top = -58.407
offset_right = 29.31
offset_bottom = -33.322
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "pet"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/GridContainer/pet"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -25.455
offset_right = 20.0
offset_bottom = 14.545
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_011nb")

[connection signal="timeout" from="Panel/GridContainer/SimpleTimerButton/Timer" to="Panel/GridContainer/SimpleTimerButton" method="_on_timer_timeout"]
[connection signal="pressed" from="Panel/GridContainer/SimpleTimerButton/Button" to="Panel/GridContainer/SimpleTimerButton" method="_on_button_pressed"]
[connection signal="timeout" from="Panel/GridContainer/SimpleSupriseTimer/TimerCountdown" to="Panel/GridContainer/SimpleSupriseTimer" method="_on_timer_countdown_timeout"]
[connection signal="timeout" from="Panel/GridContainer/SimpleSupriseTimer/TimerHidden" to="Panel/GridContainer/SimpleSupriseTimer" method="_on_timer_hidden_timeout"]
[connection signal="pressed" from="Panel/GridContainer/SimpleSupriseTimer/Button" to="Panel/GridContainer/SimpleSupriseTimer" method="_on_button_pressed"]
[connection signal="timeout" from="Panel/GridContainer/ticker/Timer" to="Panel/GridContainer/ticker" method="_on_timer_timeout"]
[connection signal="pressed" from="Panel/GridContainer/ticker/Button" to="Panel/GridContainer/ticker" method="_on_button_pressed"]
[connection signal="pressed" from="Panel/GridContainer/ticker/CheckButton" to="Panel/GridContainer/ticker" method="_on_check_button_pressed"]
[connection signal="timeout" from="Panel/GridContainer/pet/Timer" to="Panel/GridContainer/pet" method="_on_timer_timeout"]
[connection signal="pressed" from="Panel/GridContainer/pet/Button_Food" to="Panel/GridContainer/pet" method="_on_button_food_pressed"]
[connection signal="pressed" from="Panel/GridContainer/pet/Button_Water" to="Panel/GridContainer/pet" method="_on_button_water_pressed"]
